# cli2ansible

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEMO.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.augment/: MIGRATION.md  QUICK_START.md  README.md
.augment/rules/: architecture.md  code-quality.md  documentation.md  performance.md  security.md  testing.md
.augment/workflows/: implement-feature.md  pr-review.md
.claude/: context.json
.claude/commands/: implement-feature.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: auto-merge.yml  ci.yml
alembic/: env.py
docs/: CLAUDE_CODE_GUIDE.md  CLAUDE_WORKFLOW.md
docs/conventions/: CODE_STYLE.md  backend_api.md  python.md
docs/prds/: TEMPLATE.md  asciinema-cast-converter.md  cast-file-upload-workflow.md
prompts/: README.md  registry.yaml
prompts/agents/: documentation-agent.yaml  prd-agent.yaml  refactor-agent.yaml  security-agent.yaml  test-agent.yaml
prompts/snippets/: threat-model-checklist.md  unit-test-harness.md
scripts/: generate_sample.py  run_agent.sh
src/cli2ansible/: app.py  cli.py  settings.py
src/cli2ansible/adapters/inbound/http/: api.py  schemas.py
src/cli2ansible/adapters/outbound/capture/: asciinema_parser.py
src/cli2ansible/adapters/outbound/db/: orm.py  repository.py
src/cli2ansible/domain/: models.py  ports.py  services.py
tests/: conftest.py
tests/api/: conftest.py  test_clean_endpoint.py  test_endpoints.py  test_events.py  test_report_endpoint.py  test_root.py  test_sessions.py
tests/fixtures/: demo.cast
tests/fixtures/phil-simple-demo/: README.md  test-playbook.yml
tests/fixtures/phil-simple-demo/meta/: main.yml
tests/fixtures/phil-simple-demo/tasks/: main.yml
tests/integration/: test_asciinema_integration.py  test_services.py
tests/unit/: test_anthropic_cleaner.py  test_asciinema_parser.py  test_asciinema_parser_file.py  test_clean_models.py  test_clean_service.py  test_cli.py  test_compile_report.py  test_models.py  test_openai_cleaner.py  test_services_unit.py  test_translator.py
(+8 files in other folders)
